--- a/package.json
+++ b/package.json
@@ -67,9 +67,8 @@
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.7",
-    "ember-get-config": "0.2.2",
-    "ember-string-ishtmlsafe-polyfill": "^1.1.0"
+    "ember-cli-babel": "^6.0.0",
+    "ember-get-config": "0.2.2"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
