--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
   ],
   "dependencies": {
     "ember-cli-babel": "^6.0.0",
-    "ember-get-config": "0.2.2"
+    "ember-get-config": "^0.2.4"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
